# text-editor

./: .gitignore  CMakeLists.txt  README.md  desktop.ini  pdcurses.lib  runcmake.bat
cpp/: Controller.cpp  Model.cpp  View.cpp  main.cpp
main/: CMakeLists.txt
main/app/: main.cpp
main/include/: controller.h  model.h  view.h
main/src/: controller.cpp  model.cpp  view.cpp
my-string/: CMakeLists.txt
my-string/src/: my_string.cpp
my_string/: CMakeLists.txt  MyString.h
my_string/include/: my-string.h
my_string/src/: MyString.cpp  my-string.cpp
pdcurses/: CMakeLists.txt  CursesWrapped.cpp  CursesWrapped.h
pdcurses/src/: CursesWrapped.cpp  curses_wrapped.cpp
src/include/: MVC.h
src/my_string/: MyString.cpp  MyString.h
text-editor/app/: main.cpp
text-editor/include/: controller.h  editor_constants.h  model.h  view.h
text-editor/src/: controller.cpp  model.cpp  view.cpp
text_editor/app/: main.cpp
text_editor/include/: MVC.h  controller.h  mvc.h  view.h
text_editor/src/: Controller.cpp  Model.cpp  View.cpp  controller.cpp  model.cpp  view.cpp
